welcome.lessons.welcome.environment.Environment.scala.error
SourceCode:3: error: value tab is not a member of Unit
println tab(-1); 
        ^