welcome.lessons.welcome.environment.Environment.scala.code
forward();
var tab:Array[Integer] = new Array[Integer](4);
println tab(-1);